- Reduce usage of guava. - Ensure that tests relying on order are determinsitic.